--- a/modules/home/apps/helpers/waybar/style.css
+++ b/modules/home/apps/helpers/waybar/style.css
@@ -1,5 +1,5 @@
 * {
-  font-family: Iosevka Nerd Font;
+  font-family: Iosevka Nerd Font, monospace;
   min-height: 14px;
   font-size: 14px;
   border: none;
